# tsunagu

./: Cargo.toml  README.md
src/: main.rs
src/api/: allfunk.rs  funkktion.rs  funktion.rs  gennew.rs  mod.rs  tsuna.rs
tsunid/: id.json  id1.json  tsun_id.json
