[package]
name = "tsu-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "1.0.0"
bip32 = "0.5.1"
clap = { version = "4.3.19", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
secp256k1 = "0.27.0"
serde_json = "1.0.104"
tiny-hderive = "0.3.0"
ethers = "2.0.8"
derivation-path = "0.2.0"
libsecp256k1 = "0.3.5"
keccak-hash = "0.10.0"
keccak-rust = "1.0.2"
ethereum-types = "0.14.1"
tiny-keccak = { version = "2.0", features = ["sha3"] }
ethsign = "0.9.0"
ethaddr = "0.1.2"
eip55 = "0.4.0"
crypto-addr = "0.2.3"
k256 = "0.13.0"
sha3 = "0.10.6"
smartcore = {version = "0.2.1", features=["serde"]}
tinyjson = "2.5.1"
serde = "1.0.183"
rpassword = "7.2.0"

